fix(SendErrors): prevent jumpiness for some error messaging

--- a/assets/css/components/_modals.scss
+++ b/assets/css/components/_modals.scss
@@ -360,16 +360,6 @@
   ::-webkit-input-placeholder {
     color: $ccc;
   }
-  .advanced-recipient-row {
-    margin-bottom: 20px;
-    position: relative;
-    border: 1px solid #eee;
-    padding: 1em;
-    .ui-select-container {
-      min-width: 225px;
-      margin-right: 10px;
-    }
-  }
   .recipient-currency {
     .form-control {
       padding: 3px 10px;
